--- a/index.html
+++ b/index.html
@@ -1,14 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" src="./css/style.css">
+    <link rel="stylesheet" href="./node_modules/mdbootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./node_modules/mdbootstrap/css/mdb.min.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>HUAYZA</title>
 </head>
-<body class="body_login">
 
+<body>
+    <div class="body_login">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-7 col-lg-5">
+                    <div class="card">
+                        <div class="card-body card-body-login">
+                            <h3 class="font-weight-bold text-center">HUAYZA</h3>
+                            <div class="md-form">
+                                <input type="text" id="username_login" class="form-control">
+                                <label for="username_login">USERNAME</label>
+                            </div>
+
+                            <div class="md-form">
+                                <input type="password" id="password_login" class="form-control">
+                                <label for="password_login">PASSWORD</label>
+                            </div>
+
+                            <div class="d-flex justify-content-between mb-3">
+                                <div>
+                                    <div class="form-check">
+                                        <input type="checkbox" class="form-check-input" id="FormRemember">
+                                        <label class="form-check-label" for="FormRemember">บันทีกการใช้งานของฉัน</label>
+                                    </div>
+                                </div>
+                                <div>
+                                    <a href="" class="text-forgotpass">ลืมรหัสผ่าน ?</a>
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <button class="btn btn-block btn-login">
+                                    เข้าสู่ระบบ
+                                </button>
+                            </div>
+                            <div>
+                                <button class="btn btn-block btn-register">
+                                    สมัครสมาชิก
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+<script type="text/javascript" src="./node_modules/mdbootstrap/js/jquery-3.4.1.min.js"></script>
+<script type="text/javascript" src="./node_modules/mdbootstrap/js/popper.min.js"></script>
+<script type="text/javascript" src="./node_modules/mdbootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="./node_modules/mdbootstrap/js/mdb.min.js"></script>
 <script type="text/javascript" src="./js/core.js"></script>
+
 </html>
