--- a/game-detail.html
+++ b/game-detail.html
@@ -76,88 +76,15 @@
         <div class="container">
             <div class="row mb-3">
                 <div class="col-12 text-center">
-                    <h1 class="text-game-title">รายการถอน</h1>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 mb-3">
-                    <div class="table-responsive">
-                        <table class="table table-huayza-transfer table-bordered table-hover">
-                            <thead class="bg-4068ec white-text">
-                                <tr>
-                                    <th class="text-center" scope="col">ลูกค้า</th>
-                                    <th class="text-center" scope="col">การแจ้ง</th>
-                                    <th class="text-center" scope="col">สถานะ</th>
-                                    <th class="text-center" scope="col">จำนวนเงิน(บาท)</th>
-                                    <th class="text-center" scope="col">วันที่ทำรายการ</th>
-                                    <th class="text-center" scope="col"></th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td scope="row">Member 1</td>
-                                    <td class="text-center">withdraw</td>
-                                    <td class="text-center"><span class="status-money approve">Approve</span></td>
-                                    <td class="text-center">9000</td>
-                                    <td class="text-center">25 Jul 2019 18:21:29</td>
-                                    <td class="text-center">
-                                        <button class="btn btn-option-table dropdown-toggle" type="button"
-                                            data-toggle="dropdown" aria-haspopup="true"
-                                            aria-expanded="false">ตัวเลือก</button>
-
-                                        <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="#">1</a>
-                                            <a class="dropdown-item" href="#">2</a>
-                                            <a class="dropdown-item" href="#">3</a>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td scope="row">Member 1</td>
-                                    <td class="text-center">withdraw</td>
-                                    <td class="text-center"><span class="status-money cancel">Cancel</span></td>
-                                    <td class="text-center">9000</td>
-                                    <td class="text-center">25 Jul 2019 18:21:29</td>
-                                    <td class="text-center">
-                                        <button class="btn btn-option-table dropdown-toggle" type="button"
-                                            data-toggle="dropdown" aria-haspopup="true"
-                                            aria-expanded="false">ตัวเลือก</button>
-
-                                        <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="#">1</a>
-                                            <a class="dropdown-item" href="#">2</a>
-                                            <a class="dropdown-item" href="#">3</a>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td scope="row">Member 1</td>
-                                    <td class="text-center">withdraw</td>
-                                    <td class="text-center"><span class="status-money pendding">Pendding</span></td>
-                                    <td class="text-center">9000</td>
-                                    <td class="text-center">25 Jul 2019 18:21:29</td>
-                                    <td class="text-center">
-                                        <button class="btn btn-option-table dropdown-toggle" type="button"
-                                            data-toggle="dropdown" aria-haspopup="true"
-                                            aria-expanded="false">ตัวเลือก</button>
-
-                                        <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="#">1</a>
-                                            <a class="dropdown-item" href="#">2</a>
-                                            <a class="dropdown-item" href="#">3</a>
-                                        </div>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
+                    <div class="card">
+                        <div class="card-body">
+                            <h2 class="text-game-title">หวยรัฐบาล 1 สิงหาคม 2562</h2>
+                            <h5 class="close-text-title">ปิดรับ 01/08/2562 เวลา 15:30 น.</h5>
+                        </div>
                     </div>
                 </div>
-                <div class="col-12">
-                    <button class="btn btn-select-game btn-block">
-                        โหลดข้อมูลเพิ่ม
-                    </button>
-                </div>
             </div>
+
         </div>
     </main>
 </body>
