--- a/game.html
+++ b/game.html
@@ -29,16 +29,16 @@
                         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">แจ้ง ฝาก/ถอน</a>
                         <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">แจ้งฝาก</a>
-                            <a class="dropdown-item" href="#">แจ้งถอน</a>
+                            <a class="dropdown-item" href="form-deposit.html">แจ้งฝาก</a>
+                            <a class="dropdown-item" href="form-withdraw.html">แจ้งถอน</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">ดูรายการ ฝาก/ถอน</a>
                         <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">ดูรายการฝาก</a>
-                            <a class="dropdown-item" href="#">ดูรายการถอน</a>
+                            <a class="dropdown-item" href="list-deposit.html">ดูรายการฝาก</a>
+                            <a class="dropdown-item" href="list-withdraw.html">ดูรายการถอน</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
@@ -85,7 +85,7 @@
                         <div class="card-body text-center">
                             <h5 class="font-weight-bold mt-3">หวยรัฐบาล</h5>
                             <p>ซื้อเลข 2 หรือ 3 ตัว</p>
-                            <a href="#" class="btn btn-select-game">เข้าเกม</a>
+                            <a href="game-detail.html" class="btn btn-select-game">เข้าเกม</a>
                         </div>
                     </div>
                 </div>
@@ -94,7 +94,7 @@
                         <div class="card-body text-center">
                             <h5 class="font-weight-bold mt-3">หวยรัฐบาล</h5>
                             <p>ซื้อเลข 2 หรือ 3 ตัว</p>
-                            <a href="#" class="btn btn-select-game">เข้าเกม</a>
+                            <a href="game-detail.html" class="btn btn-select-game">เข้าเกม</a>
                         </div>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                         <div class="card-body text-center">
                             <h5 class="font-weight-bold mt-3">หวยรัฐบาล</h5>
                             <p>ซื้อเลข 2 หรือ 3 ตัว</p>
-                            <a href="#" class="btn btn-select-game">เข้าเกม</a>
+                            <a href="game-detail.html" class="btn btn-select-game">เข้าเกม</a>
                         </div>
                     </div>
                 </div>
@@ -112,7 +112,7 @@
                         <div class="card-body text-center">
                             <h5 class="font-weight-bold mt-3">หวยรัฐบาล</h5>
                             <p>ซื้อเลข 2 หรือ 3 ตัว</p>
-                            <a href="#" class="btn btn-select-game">เข้าเกม</a>
+                            <a href="game-detail.html" class="btn btn-select-game">เข้าเกม</a>
                         </div>
                     </div>
                 </div>
@@ -121,7 +121,7 @@
                         <div class="card-body text-center">
                             <h5 class="font-weight-bold mt-3">หวยรัฐบาล</h5>
                             <p>ซื้อเลข 2 หรือ 3 ตัว</p>
-                            <a href="#" class="btn btn-select-game">เข้าเกม</a>
+                            <a href="game-detail.html" class="btn btn-select-game">เข้าเกม</a>
                         </div>
                     </div>
                 </div>
@@ -130,7 +130,7 @@
                         <div class="card-body text-center">
                             <h5 class="font-weight-bold mt-3">หวยรัฐบาล</h5>
                             <p>ซื้อเลข 2 หรือ 3 ตัว</p>
-                            <a href="#" class="btn btn-select-game">เข้าเกม</a>
+                            <a href="game-detail.html" class="btn btn-select-game">เข้าเกม</a>
                         </div>
                     </div>
                 </div>
@@ -139,7 +139,7 @@
                         <div class="card-body text-center">
                             <h5 class="font-weight-bold mt-3">หวยรัฐบาล</h5>
                             <p>ซื้อเลข 2 หรือ 3 ตัว</p>
-                            <a href="#" class="btn btn-select-game">เข้าเกม</a>
+                            <a href="game-detail.html" class="btn btn-select-game">เข้าเกม</a>
                         </div>
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                         <div class="card-body text-center">
                             <h5 class="font-weight-bold mt-3">หวยรัฐบาล</h5>
                             <p>ซื้อเลข 2 หรือ 3 ตัว</p>
-                            <a href="#" class="btn btn-select-game">เข้าเกม</a>
+                            <a href="game-detail.html" class="btn btn-select-game">เข้าเกม</a>
                         </div>
                     </div>
                 </div>
