--- a/index.html
+++ b/index.html
@@ -41,9 +41,12 @@
                                 </div>
                             </div>
                             <div class="mb-3">
-                                <button class="btn btn-block btn-login">
+                                <a class="btn btn-block btn-login" href="game.html">
                                     เข้าสู่ระบบ
-                                </button>
+                                </a>
+                                <!-- <button class="btn btn-block btn-login">
+                                    เข้าสู่ระบบ
+                                </button> -->
                             </div>
                             <div>
                                 <button class="btn btn-block btn-register">
