--- a/list-deposit.html
+++ b/list-deposit.html
@@ -29,16 +29,16 @@
                         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">แจ้ง ฝาก/ถอน</a>
                         <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">แจ้งฝาก</a>
-                            <a class="dropdown-item" href="#">แจ้งถอน</a>
+                            <a class="dropdown-item" href="form-deposit.html">แจ้งฝาก</a>
+                            <a class="dropdown-item" href="form-withdraw.html">แจ้งถอน</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">ดูรายการ ฝาก/ถอน</a>
                         <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">ดูรายการฝาก</a>
-                            <a class="dropdown-item" href="#">ดูรายการถอน</a>
+                            <a class="dropdown-item" href="list-deposit.html">ดูรายการฝาก</a>
+                            <a class="dropdown-item" href="list-withdraw.html">ดูรายการถอน</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown">
